scripts/e2e/cmd/runner/testdata/networking-v1/one-namespace-one-ingress/rewrite-rule-set-custom-resource/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: backendapp
          imagePullPolicy: Always
          image: docker.io/kennethreitz/httpbin
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/rewrite-rule-set-custom-resource: "test-rewrite-rule-set"
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: backend-service
                port:
                  number: 80
            pathType: Exact

---

apiVersion: appgw.ingress.azure.io/v1beta1
kind: AzureApplicationGatewayRewrite
metadata:
  name: test-rewrite-rule-set
spec:
  rewriteRules:
  - name: my-rewrite-rule
    
    ruleSequence: 7

    conditions:
    - ignoreCase: false
      negate: false
      variable: http_req_Host
      pattern: example.com

    actions:
      responseHeaderConfigurations:
      - actionType: set
        headerName: test-header
        headerValue: test-value
